[project]
name = "data-lineage-agentic-app"
version = "2.0.0"
description = "Production-grade agentic AI data lineage extraction for COBOL/Java/SQL codebases using LangGraph ReAct+Reflexion and Amazon Bedrock."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core agent frameworks
    "langchain>=0.3",
    "langgraph>=0.4",
    "langchain-aws>=0.2",
    "langchain-community>=0.3",

    # Strands Agents (RAG query layer)
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",

    # AWS / Bedrock
    "boto3>=1.35",
    "botocore>=1.35",

    # Code parsing
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "sqlglot>=26.0",

    # Vector store
    "chromadb>=0.5",

    # Graph database
    "neo4j>=5.0",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Observability (OpenTelemetry → local Jaeger)
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # OpenLineage
    "openlineage-python>=1.20.0",

    # Utilities
    "python-dotenv>=1.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "rich>=13.0",
    "sse-starlette>=1.8",
    "streamlit>=1.35.0",
    "rank-bm25>=0.2",

    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "agents", "parsers", "graph", "lineage", "rag", "observability", "evaluation", "api", "config", "embeddings"]

[project.scripts]
lineage = "main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
